--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Angular Rover Curiosity</h1>
-      <app-curiosity></app-curiosity>
-    </div>
+    </div>  
+  </div>
+  <div class="row">
+    <app-curiosity></app-curiosity>
   </div>
 </div>
